--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Update logs [skip ci]"
+          commit_message: "Update logs"
           # تغییر مهم: فقط فایل‌های تکست ذخیره می‌شوند تا پروفایل گیت‌هاب شلوغ نشود
           file_pattern: '*.txt'
           branch: main
